syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/flogram-lab/wayout/flo_tg/proto";

// TODO: telegram message attachments
// todo forward tracking deep_from_id/source_uid/title/etc?

enum FLAGS {
   Invalid = 0;
   V1 = 1;
   Tg = 2;
   User = 4;
   Group = 8;
   Channel = 16;
}

message FLO_SOURCE {
   int32 flags = 1;

   int64 deep_from_id = 2;
   string source_uid = 3;
   string title = 4;
}

message FLO_MESSAGE {
   int32 flags = 1;

   int64 deep_from_id = 2;
   string source_uid = 3;
   string title = 4;

   string message_uid = 5;
   google.protobuf.Timestamp created_at = 6;
   string text = 7;
   
   repeated string message_links = 8;
}

// ------------------------------------------------------------------------------------------------------
// flo_tg

service FlotgService {
   rpc GetChats(google.protobuf.Empty) returns (stream FlotgMonitor);
   rpc SetMonitoring(FlotgMonitor) returns (FlotgMonitor);
   rpc GetMessages(FlotgMessagesRequest) returns (stream FLO_MESSAGE);
}

message FlotgMonitor {
   int32 flags = 1;

   int64 from_peer_id = 2;
   string source_uid = 3;
   bool monitoring_enabled = 4;
}

message FlotgMessagesRequest {
   int32 flags = 1;

   repeated string source_uid = 2;
   google.protobuf.Timestamp messages_since = 3;
}

// ------------------------------------------------------------------------------------------------------
// flo_rss

service FloRssService {
   rpc GetFeeds(google.protobuf.Empty) returns (stream FloSyndicationFeed);
   rpc CreateFeed(FloRssCreate) returns (FloSyndicationFeed);
   rpc DeleteFeed(FloSyndicationFeed) returns (google.protobuf.Empty);
   rpc GetMessages(FloSyndicationFeed) returns (stream FLO_MESSAGE);
}

message FloSyndicationFeed {
   int32 flags = 1;

   string source_uid = 2;
   string title = 3;
   string from_peer_id = 4;
   string rss_uri = 5;
}

message FloRssCreate {
   int32 flags = 1;

   string source_uid = 2;
}